# Tasker

./: .clang-format  .gitignore  README.md  cliff.toml  meson.build  meson_options.txt
.circleci/: config.yml
.github/workflows/: build.yaml  test.yaml
doc/: config.txt
src/: callback.hpp  config.hpp.in  context.hpp  defaults.hpp  env.cpp  env.hpp  errors.cpp  errors.hpp  logging.cpp  logging.hpp  main.cpp  main.hpp  meson.build  ncurses.hpp  testing.cpp  testing.hpp  tui.hpp  utility.cpp  utility.hpp
src/config/: config.cpp  config.hpp  keybinds.cpp  keybinds.hpp
src/ext/: ncurses.cpp  ncurses.hpp
src/mocks/: ncurses.hpp
src/projects/: project.cpp  project.hpp
src/stubs/: ncurses.cpp  ncurses.hpp
src/tasks/: task.cpp  task.hpp
src/tests/: basic_window.test.cpp  board.test.cpp  config.test.cpp  context.test.cpp  env.test.cpp  logging.test.cpp  main.test.cpp  meson.build  ncurses.test.cpp  pane.test.cpp  project.test.cpp  root_window.test.cpp  task.test.cpp  task_list.test.cpp  tui.test.cpp  tui_project.test.cpp  user.test.cpp  utility.test.cpp  window.test.cpp
src/tui/: bar.hpp  basic_window.hpp  board.hpp  color.hpp  object.hpp  pane.hpp  project.hpp  root_window.hpp  task_list.hpp  title_bar.hpp  window.hpp
src/users/: user.cpp  user.hpp
